# fits_explorer

./: .gitignore  CMakeLists.txt  README.md
src/: app.cpp  app.h  main.cpp  test_cli.cpp
src/database/: database.cpp  database.h
src/indexer/: indexer.cpp  indexer.h
src/thumbnail/: thumbnail.cpp  thumbnail.h
src/ui/: ui.cpp  ui.h
